--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,12 @@
 body {
+    height: 100vh;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;  
+    background-color: #1a1c29;  
+    background-image: url(../img/Fundo1.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .container {
@@ -11,7 +17,7 @@ body {
 h2 {
     text-align: center;
     font-size: 2em;
-    color: #333;
+    color: #ffffff;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -27,7 +33,10 @@ h2 {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    color: #ffffff;
+    background: #ffffff10;
+    backdrop-filter: blur(10px);
+    border: #ffffff10 2px solid;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -44,6 +53,7 @@ h2 {
     justify-content: center;
     align-items: center;
     margin: 10px 0;
+    color: #ffffff;
 }
 
 .input-padrao {
@@ -57,8 +67,11 @@ h2 {
 
 .input-pequeno {
     max-width: 100px;
-    margin-left: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    
 }
+
 
 .input-nome {
     padding: 8px;
@@ -88,15 +101,19 @@ input[type="submit"]:hover {
 }
 
 #lista {
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
+    background: #ffffff10;
+    backdrop-filter: blur(10px);
+    border: #ffffff10 2px solid;
+    border-radius: 5px;
     max-width: 600px;
     margin: 20px auto;
     padding: 10px;
+    color: #fff;
 }
 
 #lista h3 {
     margin-top: 0;
+    text-align: center;
 }
 
 #lista ul {
